# decontainerizr

./: CMakeLists.txt  build.docker  clean-build.sh
extractor/: extract
extractor/fs/: entrypoint
interpreter/: CMakeLists.txt  intp.cpp
